# agentyper

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  test_main.py
.github/workflows/: publish.yml
docs/: agent_cli_challenges_and_principles.md  agent_cli_requirements.md  agent_dx_cli_scale.md  for-agents.md  for-developers.md  verbosity_patterns.md  why_agentyper.md
docs/sessions/: 2026-04-05T14-00.md  2026-04-07T00-00.md  2026-04-07T10-00.md  2026-04-16T17-34.md  2026-04-16T17-42.md  2026-04-16T17-52.md  2026-04-17T11-07.md
examples/contacts/: app.py  models.py  store.py
src/agentyper/: __init__.py  cli.py  testing.py
src/agentyper/_internal/: _app.py  _errors.py  _interactive.py  _logging.py  _output.py  _params.py  _schema.py  _session.py
tests/: test_agentyper.py
